--- a/wx_tax/index.html
+++ b/wx_tax/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>税企通</title>
   <script src="/static/vue-router.min.js"></script>
-  <script src="/static/vue.min.js"></script>
+  <script src="/static/vue.js"></script>
   <script src="/static/vuex.min.js"></script>
   <script src="/static/axios.min.js"></script> 
 </head>
