--- a/wx_tax/index.html
+++ b/wx_tax/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <title>税企通</title>
+  <title>税企通-税务局版</title>
   <script src="/static/vue-router.min.js"></script>
   <script src="/static/vue.js"></script>
   <script src="/static/vuex.min.js"></script>
